resources/tests/invalid_syntax/var_decl_iden.ct
//`Expected an identifier!
//1
fn main()->i64 {
  var ;
}